Enum UserRole {
  CUSTOMER
  EMPLOYEE
  ADMIN
}

Enum MovieStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

Enum SeatType {
  REGULAR
  LOVE
  VIP
}

Enum BookingStatus {
  HOLD
  RESERVED
  PAID
  CANCELLED
  EXPIRED
}

Enum VerificationCodeType {
  ACCOUNT_VERIFICATION
  PASSWORD_RESET
}

Enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
  CANCELLED
  REFUNDED
}

Table users {
  id uuid [primary key]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  phone varchar(50) [unique, not null]
  profile_image_url varchar(255) [not null]
  role UserRole [default: 'CUSTOMER']
  is_active boolean [default: false]
  city_id uuid [not null]
  street_address varchar(255) [not null]
  stripe_customer_id varchar(255) [unique]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table verification_codes {
  id uuid [primary key]
  user_id uuid [not null]
  type VerificationCodeType [not null]
  code_hash varchar(255) [not null]
  expires_at timestamp [not null]
  is_used boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table movies {
  id uuid [primary key]
  title varchar(255) [not null]
  synopsis text
  duration_minutes integer
  pg_rating varchar(8)
  language varchar(50)
  trailer_url varchar(255)
  status MovieStatus [default: 'DRAFT']
  draft_step integer [default: 1]
  release_date date
  end_date date
  created_at timestamp [default: `now()`]
}

Table genres {
  id uuid [primary key]
  name varchar(50) [unique, not null]
}

Table movie_genres {
  id uuid [primary key]
  movie_id uuid [not null]
  genre_id uuid [not null]
  Indexes {
    (movie_id, genre_id) [unique]
  }
}

Table people {
  id uuid [primary key]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
}

Table movie_cast {
  id uuid [primary key]
  movie_id uuid [not null]
  person_id uuid [not null]
  character_name varchar(100)
  Indexes {
    (movie_id, person_id) [unique]
  }
}

Table movie_writers {
  id uuid [primary key]
  movie_id uuid [not null]
  person_id uuid [not null]
  Indexes {
    (movie_id, person_id) [unique]
  }
}

Table movie_directors {
  id uuid [primary key]
  movie_id uuid [not null]
  person_id uuid [not null]
  Indexes {
    (movie_id, person_id) [unique]
  }
}

Table movie_images {
  id uuid [primary key]
  movie_id uuid [not null]
  image_url varchar(255) [not null]
  is_cover boolean [default: false]
}

Table cities {
  id uuid [primary key]
  name varchar(100) [not null]
  country varchar(100) [default: 'Bosnia and Herzegovina']
}

Table venues {
  id uuid [primary key]
  city_id uuid [not null]
  name varchar(255) [not null]
  street_address varchar(255) [not null]
  phone varchar(50)
  image_url varchar(255)
}

Table halls {
  id uuid [primary key]
  venue_id uuid [not null]
  name varchar(50) [not null]
}

Table seat_templates {
  id uuid [primary key]
  row_num varchar(10) [not null]
  seat_num varchar(10) [not null]
  type SeatType [default: 'REGULAR']
  Indexes {
    (row_num, seat_num) [unique]
  }
}

Table seat_prices {
  seat_type SeatType [primary key]
  price decimal [not null]
}

Table projections {
  id uuid [primary key]
  movie_id uuid [not null]
  hall_id uuid [not null]
  start_time timestamp [not null]
  end_time timestamp [not null]
  created_at timestamp [default: `now()`]
  Indexes {
    (hall_id, start_time) [unique]
  }
}

Table bookings {
  id uuid [primary key]
  user_id uuid [not null]
  projection_id uuid [not null]
  status BookingStatus [default: 'HOLD']
  total_price decimal [not null]
  expires_at timestamp [not null]
  is_reminder_enabled boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table booking_seats {
  id uuid [primary key]
  booking_id uuid [not null]
  seat_template_id uuid [not null]
  projection_id uuid [not null]
  price_snapshot decimal [not null]
  is_active boolean [default: true]
  Indexes {
    (booking_id, seat_template_id) [unique]
  }
}

Table user_payment_methods {
  id uuid [primary key]
  user_id uuid [not null]
  stripe_payment_method_id varchar(255) [unique, not null]
  card_brand varchar(50) [not null]
  last_four varchar(4) [not null]
  exp_month int [not null]
  exp_year int [not null]
  created_at timestamp [default: `now()`]
}

Table payments {
  id uuid [primary key]
  booking_id uuid [not null]
  stripe_session_id varchar(255) [unique]
  amount decimal [not null]
  currency varchar(10) [default: 'BAM']
  status PaymentStatus [default: 'PENDING']
  paid_at timestamp
  created_at timestamp [default: `now()`]
}

Table notifications {
  id uuid [primary key]
  user_id uuid [not null]
  title varchar(255) [not null]
  message text [not null]
  is_read boolean [default: false]
  send_time timestamp
  created_at timestamp [default: `now()`]
}

Ref: users.city_id > cities.id
Ref: verification_codes.user_id > users.id

Ref: movie_genres.movie_id > movies.id
Ref: movie_genres.genre_id > genres.id

Ref: movie_cast.movie_id > movies.id
Ref: movie_cast.person_id > people.id

Ref: movie_writers.movie_id > movies.id
Ref: movie_writers.person_id > people.id

Ref: movie_directors.movie_id > movies.id
Ref: movie_directors.person_id > people.id

Ref: movie_images.movie_id > movies.id

Ref: venues.city_id > cities.id
Ref: halls.venue_id > venues.id

Ref: seat_templates.type > seat_prices.seat_type

Ref: projections.movie_id > movies.id
Ref: projections.hall_id > halls.id

Ref: bookings.user_id > users.id
Ref: bookings.projection_id > projections.id

Ref: booking_seats.booking_id > bookings.id
Ref: booking_seats.seat_template_id > seat_templates.id
Ref: booking_seats.projection_id > projections.id

Ref: notifications.user_id > users.id

Ref: user_payment_methods.user_id > users.id
Ref: payments.booking_id > bookings.id
